[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-print-cli"
version = "0.1.0"
description = "CLI tool for ETH Zurich's webprint service (SavaPage)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Joshua Swanson" }]
keywords = ["eth", "zurich", "printing", "savapage", "webprint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Printing",
]
dependencies = [
    "requests>=2.28",
    "click>=8.0",
]

[tool.setuptools.packages.find]
include = ["eth_print_cli*"]

[project.scripts]
ethprint = "eth_print_cli.cli:main"

[project.urls]
Homepage = "https://github.com/joshuaswanson/eth-print-cli"
Issues = "https://github.com/joshuaswanson/eth-print-cli/issues"
